Added open source code link in HTML

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         </div>
         </p>
         <p id="time"></p>
+        <p><a href="https://github.com/amdawgs/New-Project">Open source code</a>by Amanda Davenport</p>
     </div>
     <script src="src/script.js"></script>
 </body>
