--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         </p>
         <p id="time"></p>
-        <p id="footer"><a href="https://github.com/amdawgs/New-Project">Open source code </a>by Amanda Davenport</p>
+        <p id="footer"><a href="https://github.com/amdawgs/New-Project" target="blank">Open source code </a>by Amanda Davenport</p>
     </div>
     <script src="src/script.js"></script>
 </body>
