Added high/low of current day's weather forecast from API to the HTML and JS

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="row">
                 <div class="col-sm-1 current-city" id="display-city"> Tokyo</div>
                 <div class="col-2 current-temp"><span id="current-temp">19°C</span>
-                    <div class="current-hi">High 32°C</div>
-                    <div class="current-lo">Low 25°C</div>
+                    <div class="current-hi" id="current-hi">High 32°C</div>
+                    <div class="current-lo" id="current-lo">Low 25°C</div>
                 </div>
                 <div class="col-sm-2 current-icon-desc">
                     <i class="col-sm-2 fas fa-cloud-rain current-icon"></i>
