--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather ☔️☀️⛅️</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://kit.fontawesome.com/2e635863f1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://kit.fontawesome.com/2e635863f1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
+        <div class="weather-block">
         <p>
         <form id="form">
             <div class="input-group-prepend">
@@ -27,12 +28,12 @@
         <p>
         <div class="current-weather">
             <div class="row">
-                <div class="col-sm-1 current-city" id="display-city"> Tokyo</div>
-                <div class="col-2 current-temp"><span id="current-temp">19°C</span>
+                <div class="col-sm current-city" id="display-city"> Tokyo</div>
+                <div class="col-sm current-temp"><span id="current-temp">19°C</span>
                     <div class="current-hi" id="current-hi">High 32°C</div>
                     <div class="current-lo" id="current-lo">Low 25°C</div>
                 </div>
-                <div class="col-sm-2 current-icon-desc">
+                <div class="col-sm current-icon-desc">
                     <i class="col-sm-2 fas fa-cloud-rain current-icon"></i>
                     <div class="current-desc">Raining</div>
                 </div>
@@ -42,33 +43,33 @@
         <p>
         <div class="weather-forecast">
             <div class="row">
-                <div class="col-sm-1 day1-body">
+                <div class="col-sm day1-body">
                     <h5 class="day-title">Mon</h5>
                     <i class="fas fa-cloud-sun icon"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
-                <div class="col-sm-1 day2-body">
+                <div class="col-sm day2-body">
                     <h5 class="day-title">Tue</h5>
                     <i class="fas fa-cloud-sun icon"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
-                <div class="col-sm-1 day3-body">
+                <div class="col-sm day3-body">
                     <h5 class="day-title">Wed</h5>
                     <i class="fas fa-cloud-sun icon"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
-                <div class="col-sm-1 day4-body">
+                <div class="col-sm day4-body">
                     <h5 class="day-title">Thu</h5>
                     <i class="fas fa-cloud-sun icon"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
-                <div class="col-sm-1 day5-body">
+                <div class="col-sm day5-body">
                     <h5 class="day-title">Fri</h5>
                     <i class="fas fa-cloud-sun icon"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
             </div>
-        </div>
+            </div>
         </p>
         <p>
         <div class="col-sm-5 scale-change">
@@ -80,7 +81,8 @@
         </div>
         </p>
         <p id="time"></p>
-        <p id="footer"><a href="https://github.com/amdawgs/New-Project" target="blank">Open source code </a>by Amanda Davenport</p>
+        <p id="footer"><a href="https://github.com/amdawgs/New-Project" target="_blank">Open source code </a>by Amanda Davenport</p>
+    </div>
     </div>
     <script src="src/script.js"></script>
 </body>
