--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://kit.fontawesome.com/2e635863f1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
 </head>
 
@@ -81,8 +83,9 @@
         </div>
         </p>
         <p id="time"></p>
-        <p id="footer"><a href="https://github.com/amdawgs/New-Project" target="_blank">Open source code </a>by Amanda Davenport</p>
     </div>
+    <p id="footer"><a href="https://github.com/amdawgs/New-Project" target="_blank">Open source code </a>by Amanda Davenport
+    </p>
     </div>
     <script src="src/script.js"></script>
 </body>
