--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&family=Montserrat&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
 </head>
 
@@ -36,8 +37,8 @@
                     <div class="current-lo" id="current-lo">Low 25°C</div>
                 </div>
                 <div class="col-sm current-icon-desc">
-                    <i class="col-sm-2 fas fa-cloud-rain current-icon"></i>
-                    <div class="current-desc">Raining</div>
+                  <span id="icon"><img src="https://openweathermap.org/img/wn/01d@2x.png" id="current-icon" /></span>
+                    <div class="current-desc">Rain</div>
                 </div>
             </div>
         </div>
@@ -47,27 +48,27 @@
             <div class="row">
                 <div class="col-sm day1-body">
                     <h5 class="day-title">Mon</h5>
-                    <i class="fas fa-cloud-sun icon"></i>
+                    <i class="fas fa-cloud-sun icon-forecast"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
                 <div class="col-sm day2-body">
                     <h5 class="day-title">Tue</h5>
-                    <i class="fas fa-cloud-sun icon"></i>
+                    <i class="fas fa-cloud-sun icon-forecast"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
                 <div class="col-sm day3-body">
                     <h5 class="day-title">Wed</h5>
-                    <i class="fas fa-cloud-sun icon"></i>
+                    <i class="fas fa-cloud-sun icon-forecast"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
                 <div class="col-sm day4-body">
                     <h5 class="day-title">Thu</h5>
-                    <i class="fas fa-cloud-sun icon"></i>
+                    <i class="fas fa-cloud-sun icon-forecast"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
                 <div class="col-sm day5-body">
                     <h5 class="day-title">Fri</h5>
-                    <i class="fas fa-cloud-sun icon"></i>
+                    <i class="fas fa-cloud-sun icon-forecast"></i>
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
             </div>
@@ -75,14 +76,14 @@
         </p>
         <p>
         <div class="col-sm-5 scale-change">
-            <span><a href="#" id="celsius-temp">
+            <span id="celsius-temp"><a href="#" id="celsius-temp">
                     °C</a></span>
-            |<span>
+            |<span id="fahrenheit-temp">
                 <a href="#" id="fahrenheit-temp">
                     °F</a></span>
         </div>
         </p>
-        <p id="time"></p>
+        <span id="last-refreshed">Last refreshed at </span><span id="time"></p>
     </div>
     <p id="footer"><a href="https://github.com/amdawgs/New-Project" target="_blank">Open source code </a>by Amanda Davenport
     </p>
