Set default city to Tokyo, so it loads current weather upon page load

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <!--<input type="text" placeholder="Enter a city name">-->
                 <!--<div class="form-group"></div>-->
                 <input type="text" class="form-control" id="searched-city" placeholder="Enter a city name" />
-                <button type="submit" class="btn btn-secondary mb-2 search-button">Search</button>
+                <button type="submit" class="btn btn-primary mb-2 search-button w-25">Search</button>
             </div>
         </form>
         </p>
