Adjusted active class links for Fahrenheit and Celsius conversion

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         </p>
         <p>
         <div class="col-sm-5 scale-change">
-            <span id="celsius-temp"><a href="#" id="celsius-temp">
+            <span id="celsius-temp"><a href="#" id="celsius-link" class="active">
                     °C</a></span>
             |<span id="fahrenheit-temp">
-                <a href="#" id="fahrenheit-temp">
+                <a href="#" id="fahrenheit-link">
                     °F</a></span>
         </div>
         </p>
