--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         <p>
         <div class="current-weather">
             <div class="row">
+                <div class="city-wrapper">
                 <div class="col-sm current-city" id="display-city"> Tokyo</div>
+                <div class="current-humidity">Humidity: 58%</div>
+                <div class="current-wind">Wind: 2km/h</div>
+                </div>
                 <div class="col-sm current-temp"><span id="current-temp">19°C</span>
                     <div class="current-hi" id="current-hi">High 32°C</div>
                     <div class="current-lo" id="current-lo">Low 25°C</div>
@@ -45,30 +49,30 @@
         </p>
         <p>
         <div class="weather-forecast">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col-sm day1-body">
                     <h5 class="day-title">Mon</h5>
-                    <i class="fas fa-cloud-sun icon-forecast"></i>
+                    <img src="https://openweathermap.org/img/wn/01d@2x.png" id="day1-icon" />
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
                 <div class="col-sm day2-body">
                     <h5 class="day-title">Tue</h5>
-                    <i class="fas fa-cloud-sun icon-forecast"></i>
+                    <img src="https://openweathermap.org/img/wn/01d@2x.png" id="day2-icon" />
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
                 <div class="col-sm day3-body">
                     <h5 class="day-title">Wed</h5>
-                    <i class="fas fa-cloud-sun icon-forecast"></i>
+                    <img src="https://openweathermap.org/img/wn/01d@2x.png" id="day3-icon" />
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
                 <div class="col-sm day4-body">
                     <h5 class="day-title">Thu</h5>
-                    <i class="fas fa-cloud-sun icon-forecast"></i>
+                    <img src="https://openweathermap.org/img/wn/01d@2x.png" id="day4-icon" />
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
                 <div class="col-sm day5-body">
                     <h5 class="day-title">Fri</h5>
-                    <i class="fas fa-cloud-sun icon-forecast"></i>
+                    <img src="https://openweathermap.org/img/wn/01d@2x.png" id="day5-icon" />
                     <h6 class="forecast-hilow">H: 25°C <br /> L: 32°C</h6>
                 </div>
             </div>
